--- a/Ejercicio 0/Ejercicio 0/style/style.css
+++ b/Ejercicio 0/Ejercicio 0/style/style.css
@@ -55,7 +55,6 @@ h1 :link , h1 :visited {
 }
 
 #logo {
-    margin: 0px 1%;
     background-color: #1d1d1d;
 }
 
@@ -73,7 +72,7 @@ h1 :link , h1 :visited {
     overflow: hidden;
     background-color: #2d2d2d;
     position: relative;
-    margin: 0px 1%;
+    
 }
 
 #menu li {
@@ -183,4 +182,149 @@ ul {
     color: white;
     font-size: 9px;
     text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+    #footer {
+        position: absolute;
+        bottom: 0%;
+        width: 100%;
+    }
+
+    #footer p {
+        font-size: 13px;
+    }
+
+    .sidebar_item :link ,  .sidebar_item :visited {
+        font-size: 13px;
+    }
+
+    .sidebar_item h5 {
+        font-size: 10px;
+    }
+    
+    .sidebar_item h3 {
+        font-size: 14px;
+    }
+
+    #content h1 {
+        font-size: 15px;
+    }
+    
+    #content p {
+        font-size: 9px;
+    }
+    
+    #content li  {
+        font-size: 9px;
+    }
+    
+    #content h2 {
+        font-size: 15px;
+    }
+    
+    
+    #sidebar_container {
+        max-width: 200px;
+    }
+    
+    
+    .sidebar_item p {
+        font-size: 9px;
+    }
+    
+    .sidebar_item h4 {
+        font-size: 12px;
+    }
+
+    #header h1 {
+        font-size: 28px;
+    }
+    
+    #header h2 {
+        font-size: 13px;
+    }
+    
+    #menu li {
+        font-size: 12px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    #footer {
+        position: absolute;
+        bottom: 0%;
+        left: 50%;
+        transform: translate(-50%,0%);
+        width: 60%;
+    }
+
+    #footer p {
+        font-size: 16px;
+    }
+
+    .sidebar_item :link ,  .sidebar_item :visited {
+        font-size: 16px;
+    }
+
+    .sidebar_item h5 {
+        font-size: 13px;
+    }
+    
+    .sidebar_item h3 {
+        font-size: 17px;
+    }
+
+    #content h1 {
+        font-size: 17px;
+    }
+    
+    #content p {
+        font-size: 11px;
+    }
+    
+    #content li  {
+        font-size: 11px;
+    }
+    
+    #content h2 {
+        font-size: 17px;
+    }
+    
+    
+    #sidebar_container {
+        max-width: 200px;
+    }
+    
+    
+    .sidebar_item p {
+        font-size: 13px;
+    }
+    
+    .sidebar_item h4 {
+        font-size: 17px;
+    }
+
+    #header h1 {
+        font-size: 32px;
+    }
+    
+    #header h2 {
+        font-size: 18px;
+    }
+    
+    #menu li {
+        padding: 10px;
+        font-size: 18px;
+    }
+    
+    #margin {
+        width: 60%;
+        margin: auto;
+    }
+
+    #site_content {
+        width: 60%;
+        margin: auto;
+    }
 }
