--- a/plantilla/style/style.css
+++ b/plantilla/style/style.css
@@ -47,7 +47,7 @@ a {
 .row1 #header #hgroup h1 a, .row1 #header #hgroup h2 {
     font-family: auto;
     font-weight: normal;
-    font-size: 1rem;
+    font-size: 16px;
     color: #b4b4b4;
 }
 
@@ -74,13 +74,13 @@ a {
 }
 
 .row1 #header nav li {
-    padding: 1rem 0.5rem;
+    padding: 16px 8px;
     flex: 1;
     display: flex;
     justify-content: center;
     font-family: serif;
     text-transform: uppercase;
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 .row1 #header nav li a {
@@ -92,7 +92,7 @@ a {
     width: 960px;
     flex: 1;
     margin: 0 auto;
-    padding: 2rem 0;
+    padding: 32px 0;
 }
 
 .row2 #slider {
@@ -103,7 +103,7 @@ a {
 .row2 #services {
     display: flex;
     justify-content: space-between;
-    margin-top: 2rem;
+    margin-top: 32px;
 }
 
 .row2 #services .one_third figure {
@@ -112,7 +112,7 @@ a {
 }
 
 .row2 #services .one_third figure img {
-    padding: 0.25rem;
+    padding: 4px;
     border: 1px solid #bdbdbd;
 }
 
@@ -135,14 +135,14 @@ a {
 }
 
 .row3 {
-    height: 5rem;
+    height: 80px;
     background-color: #333333;
 }
 
 .row4 {
-    height: 10rem;
+    height: 160px;
     justify-content: start;
-    padding-left: 1rem;
+    padding-left: 16px;
     background-color: #232323;
 }
 
